# protobuf

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  prototool.yaml
extra/: BUILD.bazel  extra.pb.go  extra.proto
types/: BUILD.bazel  type.pb.go  type.proto  types-extra.go  types-extra_test.go
