load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "extrapb_proto",
    srcs = ["extra.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "extrapb_go_proto",
    importpath = "github.com/fzerorubigd/protobuf/extra",
    proto = ":extrapb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":extrapb_go_proto"],
    importpath = "github.com/fzerorubigd/protobuf/extra",
    visibility = ["//visibility:public"],
)
