load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "typespb_proto",
    srcs = ["type.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "typespb_go_proto",
    importpath = "github.com/fzerorubigd/protobuf/types",
    proto = ":typespb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["types-extra.go"],
    embed = [":typespb_go_proto"],
    importpath = "github.com/fzerorubigd/protobuf/types",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lib_pq//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["types-extra_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
